// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaybackControlButton should render state »0« as expected 1`] = `
<div>
  <div
    aria-label="resume voice broadcast"
    class="mx_AccessibleButton mx_BroadcastPlaybackControlButton"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="mx_Icon mx_Icon_16 mx_Icon_compound-secondary-content"
      role="presentation"
      style="mask-image: url(\\"image-file-stub\\");"
    />
  </div>
</div>
`;

exports[`PlaybackControlButton should render state »1« as expected 1`] = `
<div>
  <div
    aria-label="pause voice broadcast"
    class="mx_AccessibleButton mx_BroadcastPlaybackControlButton"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="mx_Icon mx_Icon_16 mx_Icon_compound-secondary-content"
      role="presentation"
      style="mask-image: url(\\"image-file-stub\\");"
    />
  </div>
</div>
`;

exports[`PlaybackControlButton should render state »2« as expected 1`] = `
<div>
  <div
    aria-label="resume voice broadcast"
    class="mx_AccessibleButton mx_BroadcastPlaybackControlButton"
    role="button"
    tabindex="0"
  >
    <i
      aria-hidden="true"
      class="mx_Icon mx_Icon_16 mx_Icon_compound-secondary-content"
      role="presentation"
      style="mask-image: url(\\"image-file-stub\\");"
    />
  </div>
</div>
`;
